--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,13 @@
 <h1>Home#index</h1>
 <p>Find me in app/views/home/index.html.erb</p>
+
+<%= stylesheet_pack_tag('hello_react') %>
 <%= javascript_pack_tag 'hello_react' %>
+<div class="baz">
+  Using global css class
+</div>
+<% cssmodule "foobar.sass" do |css| %>
+  <div class="<%= css.foobar %>">
+    Using helloReact css class in rails
+  </div>
+<% end %>
